--- a/package.json
+++ b/package.json
@@ -17,18 +17,9 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
-    "eslint": "^3.8.1",
-    "gulp": "^3.9.1",
-    "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.3.2",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-htmlmin": "^2.0.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-strip-debug": "^1.1.0",
-    "gulp-util": "^3.0.7",
-    "webpack": "^1.13.2",
-    "webpack-stream": "^3.2.0"
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "webpack": "^1.13.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
