--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,13 @@
         "es6": true,
         "node": true
     },
-    "globals": {},
+    "globals": {
+        "NODE_ENV": true
+    },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:flowtype/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -18,11 +21,11 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "flowtype"
     ],
     "settings": {
          "react": {
-            "createClass": "createClass", // Regex for Component Factory to use, default to "createClass"
             "pragma": "React",  // Pragma to use, default to "React"
             "version": "15.0" // React version, default to the latest React stable release
         }
@@ -35,20 +38,6 @@
             "error",
             4,
             { "SwitchCase": 1 }
-        ],
-        "key-spacing": [
-            "error", {
-                "multiLine" : {
-                    "beforeColon" : true,
-                    "afterColon"  : true
-
-                },
-                "align"     : {
-                    "beforeColon" : true,
-                    "afterColon"  : true,
-                    "on"          : "colon"
-                }
-            }
         ],
         "linebreak-style": [
             "error",
