--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,12 @@
             "error",
             "always"
         ],
-        "react/no-deprecated": "error"
+        "react/no-deprecated": "error",
+        "flowtype/space-before-type-colon": 0,
+        "flowtype/space-after-type-colon": 0,
+        "flowtype/union-intersection-spacing": 2,
+        "flowtype/semi": 2,
+        "flowtype/delimiter-dangle": 0,
+        "flowtype/no-dupe-keys": 1
     }
 }
