--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "url": "git@github.com:erikmswan/erikmichaelswan.com-v2.git"
   },
   "scripts": {
-    "start": "NODE_ENV=production webpack",
-    "dev-server": "webpack-dev-server --inline --progress --colors",
-    "start:dev": "webpack && yarn run dev-server"
+    "start": "webpack --config webpack.prod.js",
+    "start:dev": "webpack-dev-server --inline --progress --colors --config webpack.dev.js",
+    "flow": "flow",
+    "clean": "rm -r dist/*"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
+    "loglevel": "^1.6.0",
     "react": "^16.1.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.1.1",
@@ -51,7 +53,8 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   },
   "author": "Erik Swan",
   "license": "ISC"
