--- a/.flowconfig
+++ b/.flowconfig
@@ -25,4 +25,7 @@ module.name_mapper='^components$' -> '<PROJECT_ROOT>/src/client/components'
 module.name_mapper='^reducers/\(.*\)' -> '<PROJECT_ROOT>/src/client/reducers/\1'
 module.name_mapper='^reducers$' -> '<PROJECT_ROOT>/src/client/reducers'
 module.name_mapper='^lib/*' -> '<PROJECT_ROOT>/lib/'
-module.name_mapper='.*\.scss' -> 'SCSSModule'
+module.file_ext=.md
+module.name_mapper.extension='md' -> 'empty/object'
+module.file_ext=.scss
+module.name_mapper.extension='scss' -> 'empty/object'
