--- a/package.json
+++ b/package.json
@@ -13,46 +13,44 @@
     "flow": "flow"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "classnames": "^2.2.5",
-    "dotenv": "^4.0.0",
+    "dotenv": "^6.0.0",
     "lodash": "^4.17.4",
     "loglevel": "^1.6.0",
-    "react": "^16.1.1",
-    "react-addons-css-transition-group": "^15.6.2",
+    "react": "^16.5.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.2.3",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.11.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.6.0",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-react": "^7.5.1",
-    "file-loader": "^1.1.5",
-    "flow-bin": "^0.59.0",
-    "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
+    "file-loader": "^2.0.0",
+    "flow-bin": "^0.81.0",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.1",
     "less-loader": "^4.0.5",
     "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.9",
+    "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "react-hot-loader": "^4.3.8",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-merge": "^4.1.1"
   },
   "author": "Erik Swan",
